# linkorg

./: README.md  package.json  pnpm-lock.yaml  vite.config.ts
examples/: example.org  test.md  test.org
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  testing.org
src-tauri/src/: main.rs
src-tauri/src/config/: config.rs
src-tauri/src/file/: file.rs  parse.rs
src-tauri/src/org/: file.rs  mod.rs  parse.rs
src/lib/: FileList.svelte  Links.svelte  MetaData.svelte  Node.svelte  Tabs.svelte
src/types/: data.d.ts
